--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.14"
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^22.13.10",
-    "@types/react": "^19",
+    "@types/react": "^19.0.12",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
